--- a/src/components/Item/Item.css
+++ b/src/components/Item/Item.css
@@ -1,5 +1,8 @@
 .item {
-    padding: 5px;
-    margin: 5px;
+    padding: 10px;
+    margin: 10px;
     border: solid 1px black;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
 }
