--- a/src/components/Item/Item.css
+++ b/src/components/Item/Item.css
@@ -5,4 +5,12 @@
     display: flex;
     justify-content: center;
     flex-direction: column;
+    width: 300px;
+}
+
+.contenidoItem {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
