--- a/src/components/ItemCount/ItemCount.css
+++ b/src/components/ItemCount/ItemCount.css
@@ -1,6 +1,10 @@
 .counterContainer {
-    display: block;
+    display: flex;
     padding: 5px;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin: 5px;
 }
 
 .counter {
@@ -9,7 +13,7 @@
     justify-content: space-between;
     border: solid 1px black;
     margin: 5px 0;
-    width: 100%;
+    width: 200px;
 }
 
 .itemCountButton {
@@ -24,4 +28,5 @@
 button {
     background-color: rgb(191, 236, 232);
     border: solid 1px black;
+    width: 200px;
 }
