--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -9,16 +9,26 @@
     padding: 30px;
 }
 
+.logoContainer {
+    width: 10%;
+}
+
 .navList {
-    list-style-type: none;
     display: flex;
     flex-direction: row;
     justify-content: space-around;
-    width: 100%;
+    width: 80%;
 }
 
-.navList a {
+.linkInactivo {
     text-decoration: none;
     color: black;
 }
+
+.linkActivo {
+    font-weight: 600;
+    color: black;
+    text-decoration: none;
+}
+
 
