--- a/src/components/ItemDetailContainer/ItemDetailContainer.css
+++ b/src/components/ItemDetailContainer/ItemDetailContainer.css
@@ -1,4 +1,7 @@
 .detail {
     display: flex;
     justify-content: center;
+    min-height: 80vh;
+    align-items: center;
+    flex-direction: column;
 }
