--- a/src/components/CartWidget/CartWidget.css
+++ b/src/components/CartWidget/CartWidget.css
@@ -1,14 +1,13 @@
 .cart {
-    width: 10%;
     display: flex;
     justify-content: flex-end;
 }
 
 .cartBg {
     height: 40px;
-    width: 40px;
+    min-width: 40px;
     background: rgba(255, 255, 255, 0.5);
-    border-radius: 50%;
+    border-radius: 2%;
     display: flex;
     align-items: center;
     justify-content: center;
