--- a/src/components/Cart/Cart.css
+++ b/src/components/Cart/Cart.css
@@ -48,3 +48,27 @@
     display: flex;
     justify-content: flex-end;
 }
+
+form {
+    width: 50vw;
+    padding: 1rem;
+    padding-top: .1rem;
+    margin: 1rem 0;
+}
+fieldset {
+    padding: 1rem;
+    padding-top: .1rem;
+}
+input {
+    padding: .2rem;
+    width: 100%;
+}
+.orderForm {
+    display: flex;
+    justify-content: center;
+}
+.button {
+    background-color: rgb(191, 236, 232);
+    border: solid 1px black;
+    margin-top: .5rem;
+}
